# cppgame

./: .gitignore  AssetManager.cpp  CMakeLists.txt  EnemyAI.cpp  EnemyList.cpp  Geometry.cpp  LuaInterface.cpp  PlayerController.cpp  Renderer.cpp  TestGame.cpp  TestGame2.cpp  TriShotEnemyAI.cpp  UnindexedGeometry.cpp  bullet_frag.glsl  bullet_vert.glsl  frag.glsl  main.cpp  shadows_frag.glsl  shadows_vert.glsl  vert.glsl
assets/: dumbship.blend  dumbship.ply  dumbship2.ply  legobrick.blend  legobrick.ply  quad.ply  ship1 i2.ply  ship1 i3.ply  ship1 i4.ply  ship1 v2 exporty.ply  ship1 v3.ply  ship1 v7.ply  ship1 v8.ply  ship1 v9.ply
assets/scripts/: scene.lua  test.lua
include/: AssetManager.hpp  AxisAlignedBoundingBox.hpp  BulletRenderer.hpp  BulletSystem.hpp  Camera.hpp  EnemyAI.hpp  EnemyList.hpp  Geometry.hpp  GeometryBuffer.hpp  InputHandler.hpp  Keymap.hpp  LuaInterface.hpp  Material.hpp  Object.hpp  Objects.hpp  PlayerController.hpp  Renderer.hpp  Scene.hpp  ShadowmapRenderer.hpp  TestGame.hpp  TestGame2.hpp  TestGame2Wrp.hpp  TriShotEnemyAI.hpp  UnindexedGeometry.hpp  misc.hpp
include/Assets/: Geometry.hpp  Image.hpp
include/Assets/Geometry/: Geometry.hpp  GeometryBuffer.hpp  UnindexedGeometry.hpp
include/BL/: func.hpp  scope.hpp  stream.hpp  timer.hpp
include/GL/: GL.hpp
include/GLFW/: GLFW.hpp
include/GUI/: ColorPicker.hpp  GUIManager.hpp  INKControl.hpp  INKWindow.hpp
include/nuklear/: nuklear.h  nuklear.hpp
src/: AssetManager.cpp  CMakeLists.txt  EnemyAI.cpp  LuaInterface.cpp  PlayerController.cpp  Renderer.cpp  TestGame.cpp  TestGame2.cpp  main.cpp
src/Assets/: Geometry.cpp  Image.cpp  UnindexedGeometry.cpp
src/GUI/: ColorPicker.cpp
src/nuklear/: nuklear.c
